--- a/assets/html/myportal_playground.html
+++ b/assets/html/myportal_playground.html
@@ -20,29 +20,60 @@
 
         function sendAlertBox() {
             const payload = {
-                "xy": {
+                "it": {
                     "title": "Attenzione",
                     "description": "Sembra che ci sia qualcosa che non va!"
                 },
-                "zt": {
+                "en": {
                     "title": "Warning",
                     "description": "Seems there's something wrong!"
                 }
             };
             showAlertBox(payload);
         }
+
+        function printCookies(){
+            document.getElementById("cookies").innerText = document.cookie;
+        }
     </script>
+    <style>
+        .item{
+            border: 1px solid gray;
+            padding: 8px;
+            margin-bottom: 12px;
+        }
+    </style>
 </head>
 <body>
-<h1>TEST</h1>
-<script>
-    sendSuccess();
-</script>
-<button onclick="closeModal()">CLOSE MODAL</button>
-<button onclick="showLoader()">SHOW LOADER</button>
-<button onclick="hideLoader()">HIDE LOADER</button>
-<button onclick="sendSuccess()">SEND SUCCESS</button>
-<button onclick="sendError()">SEND ERROR</button>
-<button onclick="sendAlertBox()">SEND ALERT</button>
+<h1>MY-PORTAL PLAYGROUND</h1>
+<div class="item">
+    <h3>cookies</h3>
+    <div id="cookies"></div>
+    <script>printCookies();</script>
+</div>
+<div class="item">
+    <button onclick="closeModal()">CLOSE MODAL</button>
+    <div>close the current screen</div>
+</div>
+<div class="item">
+    <button onclick="showLoader()">SHOW LOADER</button>
+    <div>show a loader activity indicator</div>
+</div>
+<div class="item">
+    <button onclick="hideLoader()">HIDE LOADER</button>
+    <div>hide the loader activity indicator</div>
+</div>
+<div class="item">
+    <button onclick="sendSuccess()">SEND SUCCESS</button>
+    <div>show a successfully message</div>
+</div>
+<div class="item">
+    <button onclick="sendError()">SEND ERROR</button>
+    <div>show a failure message</div>
+</div>
+<div class="item">
+    <button onclick="sendAlertBox()">SEND ALERT</button>
+    <div>show an alert message</div>
+</div>
 </body>
 </html>
