--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -39,6 +39,13 @@
       });
     }
 
+    const resetConfig = () => {
+      $.getJSON("/walletv2/reset", function(data) {
+          setForm(data);
+        }
+      );
+    }
+
     $(document).ready(function() {
       wcc = $("#walletCreditCard");
       wbc = $("#walletBancomat");
@@ -70,6 +77,11 @@
   <tr>
     <td colspan="2">
       <button value="update" onclick="updateConfig()">update</button>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <button value="reset" onclick="resetConfig()">reset</button>
     </td>
   </tr>
 </table>
