--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -71,7 +71,7 @@
   </tr>
 
   <tr class="form_item">
-    <td><label>Citizen Bancomat (pans)</label></td>
+    <td><label>citizen Bancomat (pans)</label></td>
     <td><input type="number" min="0" class="form_number" id="citizenBancomat"/></td>
   </tr>
   <tr>
