--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -132,7 +132,7 @@
   </tr>
 
   <tr class="form_item">
-    <td><label>wallet Credit Card</label></td>
+    <td><label>award periods</label></td>
     <td><select id="awardPeriodsPreset" style="width: 100px;"></select></td>
   </tr>
   <tr>
