--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -127,7 +127,7 @@
   </tr>
   <tr>
     <td colspan="2">
-      <i>place your json preset into /assets/bpd/award/periods</i>
+      place your json presets into <i>/assets/bpd/award/periods</i>
     </td>
   </tr>
 
