--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -36,6 +36,7 @@
     var wbp = undefined;
     var csp = undefined;
     var cbp = undefined;
+    var ccb = undefined;
 
     const setForm = (config) => {
       wcc.val(config.walletCreditCard);
@@ -45,6 +46,7 @@
       wsp.val(config.satispay);
       wbp.val(config.bPay);
       cbp.val(config.citizenBPay);
+      ccb.val(config.citizenCreditCardCoBadge);
       if(config.citizenSatispay){
         csp.attr('checked', config.citizenSatispay ? 'checked' : '');
       }
@@ -64,7 +66,8 @@
         citizenBancomat: parseInt(cbc.val(),10),
         bPay: parseInt(wbp.val(),10),
         citizenSatispay: csp.is(":checked"),
-        citizenBPay: parseInt(cbp.val(),10)
+        citizenBPay: parseInt(cbp.val(),10),
+        citizenCreditCardCoBadge: parseInt(ccb.val(),10),
       }
       $.ajax({
         type: 'POST',
@@ -100,6 +103,7 @@
       cbc = $("#citizenBancomat");
       csp = $("#citizenSatispay");
       cbp = $("#citizenBPay");
+      ccb = $("#citizenCobadge");
       $.getJSON("/walletv2/config", function(data) {
           setForm(data);
         }
@@ -251,6 +255,10 @@
   <tr class="form_item">
     <td><label>owned BancomatPay (pans)</label></td>
     <td><input type="number" min="0" class="form_number" id="citizenBPay"/></td>
+  </tr>
+  <tr class="form_item">
+    <td><label>owned Cobadge (pans)</label></td>
+    <td><input type="number" min="0" class="form_number" id="citizenCobadge"/></td>
   </tr>
   <tr class="form_item">
     <td><label>owned Satispay</label></td>
