--- a/assets/html/services_web_view.html
+++ b/assets/html/services_web_view.html
@@ -1,41 +1,13 @@
-<html>
-<body>
-<svg viewBox = "30 120 400 250">
-
-  <path d="M50.000, 350.000
-          C116.667, 116.667 166.667, 83.333 200.000, 250.000
-          C233.333, 316.667 266.667, 316.667 300.000, 250.000
-          C350.000, 200.000 450.000, 250.000 400.000, 350.000 Z">
-    <animate
-      dur='5s'
-      attributeType="XML"
-      attributeName='d'
-      repeatCount='indefinite'
-
-      values="M210.82,134c.84-37.64-29.89-86.36-56.21-102.85C126.82,16.47,48.61-10.19,16.2,10.36c-33.63,18,1.38,93.26.29,124.61,1.14,31.26-7.74,78.81,25.85,96.73,32.39,20.51,69.63-11.14,97.39-25.92C166.74,188.88,212.81,173,210.82,134Z;
-
-          M194.63,135c.84-37.64-44.79-53.72-71.1-70.22-27.79-14.71-65-46.45-97.39-25.91C-7.48,56.9,1.38,104.62.3,136c1.14,31.26-7.74,78.81,25.85,96.73,32.38,20.51,69.62-11.14,97.38-25.92C150.54,189.88,196.62,174,194.63,135Z;
-
-          M207.46,135c.84-37.64-32.62-72.11-58.93-88.61C120.74,31.72,71.39,18.37,39,38.91,5.35,56.9,1.08,144.11,0,175.46c1.14,31.26,5.39,39.32,39,57.24,32.38,20.51,112.37,25.8,140.12,11C206.12,226.82,209.45,174,207.46,135Z
-
-M194.63,117.79c.57-21.28-44.79-53.72-71.1-70.21-27.79-14.72-65-46.46-97.39-25.92C-7.48,39.65,1.38,87.37.3,118.72,1.44,150-7.44,197.53,26.15,215.46,58.53,236,139.9,248,167.66,233.24,194.67,216.34,196.62,156.78,194.63,117.79Z
-
-M215.35,127.15C216.19,89.5,230,21.54,203.71,5.05,175.92-9.67,79.28,10.47,46.87,31,13.24,49,4.75,108.21,3.67,139.56c1.14,31.25,9.61,67.33,43.2,85.25,32.38,20.5,69.62-11.14,97.38-25.92C171.26,182,217.34,166.14,215.35,127.15Z"
-    />
-
-    <animate
-      attributeName="fill"
-      dur="5s"
-      repeatCount="indefinite"
-      values="red;gold;red"
-    />
-
-  </path>
-
-  <!--
-<path id='PathBefore' d= 'M 50 350 Q 150 0 200 250 Q 250 350 300 250 C 350 200 450 250 400 350 Z'/>
-<path  id='PathNow' d= 'M 50 350 C 50 150 150 150 250 300 C 300 150 400 150 400 350 Z'/>-->
-
-</svg>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Services Web view</title>
+</head>
+<body style="padding:10px;">
+<div style="font-size: 60px;">WEB VIEW</div>
+<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?serviceId=serviceid-[0]">Service 1</a></h1></div>
+<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?serviceId=serviceid-[1]">Service 2</a></h1></div>
+<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?serviceId=serviceid-[2]">Service 3</a></h1></div>
 </body>
 </html>
