--- a/assets/html/services_web_view.html
+++ b/assets/html/services_web_view.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Services Web view</title>
+  <script type="application/javascript">
+    function sendMessagesToRN(serviceId) {
+        if (window.ReactNativeWebView) {
+          window.ReactNativeWebView.postMessage(serviceId);
+        }
+    }
+
+  </script>
 </head>
 <body style="padding:10px;">
 <div style="font-size: 60px;">WEB VIEW</div>
-<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?idService=serviceid-[0]">Service 1</a></h1></div>
-<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?idService=serviceid-[1]">Service 2</a></h1></div>
-<div><h1 style="font-size: 40px;"><a href="http://127.0.0.1:3000/services_web_view?idService=serviceid-[2]">Service 3</a></h1></div>
+<div><h1 style="font-size: 40px;color: blue; cursor: pointer;" onclick="sendMessagesToRN('serviceid-[0]')">Service 1</h1></div>
+<div><h1 style="font-size: 40px;color: blue; cursor: pointer;" onclick="sendMessagesToRN('serviceid-[1]')">Service 2</h1></div>
+<div><h1 style="font-size: 40px;color: blue; cursor: pointer;" onclick="sendMessagesToRN('serviceid-[2]')">Service 3</h1></div>
 </body>
 </html>
