--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -34,19 +34,23 @@
     var cbc = undefined;
     var wsp = undefined;
     var wbp = undefined;
+    var wpr = undefined;
     var csp = undefined;
     var cbp = undefined;
     var ccb = undefined;
+    var cpr = undefined;
 
     const setForm = (config) => {
       wcc.val(config.walletCreditCard);
       wcc_cb.val(config.walletCreditCardCoBadge);
       wbc.val(config.walletBancomat);
+      wpr.val(config.privative);
       cbc.val(config.citizenBancomat);
       wsp.val(config.satispay);
       wbp.val(config.bPay);
       cbp.val(config.citizenBPay);
       ccb.val(config.citizenCreditCardCoBadge);
+      cpr.val(config.citizenPrivative);
       if(config.citizenSatispay){
         csp.attr('checked', config.citizenSatispay ? 'checked' : '');
       }
@@ -62,6 +66,7 @@
         walletBancomat: parseInt(wbc.val(),10),
         walletCreditCard: parseInt(wcc.val(),10),
         walletCreditCardCoBadge: parseInt(wcc_cb.val(),10),
+        privative: parseInt(wpr.val(),10),
         satispay: parseInt(wsp.val(),10),
         citizenBancomat: parseInt(cbc.val(),10),
         bPay: parseInt(wbp.val(),10),
@@ -108,10 +113,12 @@
       wbc = $("#walletBancomat");
       wsp = $("#walletSatispay");
       wbp = $("#walletBPay");
+      wpr = $("#walletPrivative");
       cbc = $("#citizenBancomat");
       csp = $("#citizenSatispay");
       cbp = $("#citizenBPay");
       ccb = $("#citizenCobadge");
+      cpr = $("#citizenPrivative");
       $.getJSON("/walletv2/config", function(data) {
           setForm(data);
         }
@@ -256,6 +263,11 @@
   </tr>
 
   <tr class="form_item">
+    <td><label>wallet Privative</label></td>
+    <td><input type="number" min="0" class="form_number" id="walletPrivative"/></td>
+  </tr>
+
+  <tr class="form_item">
     <td><label>owned Bancomat (pans)</label></td>
     <td><input type="number" min="0" class="form_number" id="citizenBancomat"/></td>
   </tr>
@@ -270,6 +282,10 @@
   <tr class="form_item">
     <td><label>owned Satispay</label></td>
     <td><input type="checkbox" id="citizenSatispay"/></td>
+  </tr>
+  <tr class="form_item">
+    <td><label>owned Privative</label></td>
+    <td><input type="number" min="0" class="form_number" id="citizenPrivative"/></td>
   </tr>
   <tr>
     <td colspan="2">
