--- a/assets/html/wallet2_config.html
+++ b/assets/html/wallet2_config.html
@@ -78,6 +78,7 @@
         citizenSatispay: csp.is(":checked"),
         citizenBPay: parseInt(cbp.val(),10),
         citizenCreditCardCoBadge: parseInt(ccb.val(),10),
+        citizenPrivative: cpr.is(":checked"),
       }
       $.ajax({
         type: 'POST',
