--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,17 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome in IO</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="application/javascript">
+        const spidErrors = [
+            ["2", "Indisponibilità sistema"],
+            ["3", "Errore di sistema"],
+            ["4", "Formato binding non corretto"],
+            ["5", "Verifica della firma fallita"],
+            ["6", "Binding su metodo HTTP errato"],
+            ["7", "Errore sulla verifica della firma della richiesta"],
+            ["8", "Formato della richiesta non conforme alle specifiche SAML"],
+            ["9", "Parametro version non presente, malformato o diverso da  ‘2.0’"],
+            [
+                "10",
+                "Issuer non presente, malformato o non corrispondete all'entità che sottoscrive la richiesta"
+            ],
+            [
+                "11",
+                "ID (Identificatore richiesta)  non presente, malformato o non conforme"
+            ],
+            [
+                "12",
+                "RequestAuthnContext non presente, malformato  o non previsto da SPID"
+            ],
+            [
+                "13",
+                "IssueInstant non presente, malformato o non coerente con l'orario di arrivo della richiesta"
+            ],
+            [
+                "14",
+                "destination non presente, malformata o non coincidente con ill Gestore delle identità ricevente la richiesta"
+            ],
+            ["15", "attributo isPassivepresente e attualizzato al valore true"],
+            ["16", "AssertionConsumerServicenon correttamente valorizzato "],
+            [
+                "17",
+                "Attributo Formatdell'elemento NameIDPolicy assente o non valorizzato secondo specifica"
+            ],
+            [
+                "18",
+                "AttributeConsumerServiceIndex malformato o che riferisce a un valore non registrato nei metadati di SP"
+            ],
+            [
+                "19",
+                "Autenticazione fallita per ripetuta sottomissione di credenziali errate (superato numero  tentativi secondo le policy adottate) "
+            ],
+            [
+                "20",
+                "Utente privo di credenziali compatibili con il livello richiesto dal fornitore del servizio "
+            ],
+            ["21", "Timeout durante l’autenticazione utente"],
+            [
+                "22",
+                "Utente nega il consenso all’invio di dati al SP in caso di sessione vigente "
+            ],
+            ["23", "Utente con identità sospesa/revocata o con credenziali bloccate "],
+            ["25", "Processo di autenticazione annullato dall’utente"],
+            ["26", "Processo di erogazione dell’identità digitale andata a buon fine"],
+            ["27", "Utente già presente"],
+            ["28", "Operazione annullata"],
+            ["29", "Identità non erogata"]
+        ];
+
+        const simulateSpidError = () => {
+            const container = $("#spidSelect");
+            window.location.href = `/login?authorized=0&error=${container.val()}`;
+            return false;
+        }
+
+        $(document).ready(function() {
+            const options = spidErrors.map(v => `<option value="${v[0]}">${v[1]}</option>`);
+            const select = `<select id="spidSelect" style="width: 400px;height: 40px;font-size: 20px">${options}</select>`;
+            const container = $("#select_container");
+            container.append(`<div>${select}</div>`);
+        });
+
+    </script>
+  <meta charset="UTF-8">
+  <title>Welcome in IO</title>
 </head>
 <body>
 
 <div align="center" style="width: 100%; height:100%;margin: auto; margin-top: 20%;">
-    <h1 style="font-size: 50px;"><a href="https://github.com/pagopa/io-dev-api-server">IO - DEV Server</a></h1>
-<img src="assets/imgs/how_to_login.png" width="100%">
-<div style="width: 100%; margin-top: 30px">
-<a href="/login?authorized=1" style="padding: 16px; font-size: 50px; color: white; background-color: #0073E6; text-decoration: none;">
-    THE BUTTON</a>
+  <h1 style="font-size: 50px;"><a href="https://github.com/pagopa/io-dev-api-server">io-dev-api-server</a></h1>
+  <img src="assets/imgs/how_to_login.png" width="100%">
+  <div style="width: 100%; margin-top: 30px">
+    <a href="/login?authorized=1"
+       style="padding: 16px; font-size: 50px; color: white; background-color: #0073E6; text-decoration: none;">
+      LOGIN</a>
+  </div>
+  <div style="width: 100%; margin-top: 30px">
+      <div id="select_container">
+
+      </div>
+    <div style="margin-top: 40px; ">
+      <div
+         onclick="simulateSpidError()"
+         style="padding: 16px; width: 350px; font-size: 30px; color: white; background-color: #e67f00; text-decoration: none;">
+        SIMULATE LOGIN ERROR</div>
+    </div>
+  </div>
 </div>
 </div>
 </body>
