--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -59,7 +59,8 @@
             ["26", "Processo di erogazione dell’identità digitale andata a buon fine"],
             ["27", "Utente già presente"],
             ["28", "Operazione annullata"],
-            ["29", "Identità non erogata"]
+            ["29", "Identità non erogata"],
+            ["1001", "Cittadino minore di 14 anni"]
         ];
 
         const simulateSpidError = () => {
