--- a/assets/html/services_web_view.html
+++ b/assets/html/services_web_view.html
@@ -14,9 +14,19 @@
 
     function loadServices(){
       const container = $("#container");
-      $.getJSON("/api/v1/services", function(services) {
-        services.items.filter(p => p.scope === "LOCAL").forEach(s => {
-          container.append(`<div><h1 style="font-size: 40px;color: blue; cursor: pointer;" onclick="sendMessagesToRN('${s.service_id}')">${s.service_id}</h1></div>`);
+      $.getJSON("/services_web_view/local_services", function(services) {
+        const groupByOrganizationName = {};
+        services.forEach(s => {
+          if(!groupByOrganizationName[s.organization_name]){
+            groupByOrganizationName[s.organization_name] = [];
+          }
+          groupByOrganizationName[s.organization_name] = [...groupByOrganizationName[s.organization_name],s];
+        });
+        Object.keys(groupByOrganizationName).forEach(orgKey => {
+          container.append(`<div><h1 style="font-size: 40px;color: black;">${orgKey}</h1></div>`);
+          groupByOrganizationName[orgKey].forEach(s => {
+            container.append(`<div><h2 style="font-size: 30px;color: blue; cursor: pointer;" onclick="sendMessagesToRN('${s.service_id}')">${s.service_name}</h2></div>`);
+          });
         });
         }
       );
@@ -31,7 +41,7 @@
   </script>
 </head>
 <body style="padding:10px;">
-<div style="font-size: 60px;">WEB VIEW</div>
+<div style="font-size: 60px;">DEV-SERVER local services</div>
 <div id="container"></div>
 
 </body>
