--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>нет войне</title>
+    <link rel="stylesheet" href="https://io.italia.it/assets/selfhostedfonts.css">
 </head>
 <style>
     :root {
@@ -410,10 +411,10 @@
     let allCharities = "";
 
     function fetchData() {
-        return new Promise(resolve => {
-            setTimeout(() => resolve(sampleJson), 1000);
-        })
-        // return fetch("https://api.dev.platform.pagopa.it/donations/availabledonations").then(res => res.json())
+        // return new Promise(resolve => {
+        //     setTimeout(() => resolve(sampleJson), 1000);
+        // })
+        return fetch("http://localhost:3000/donations/availabledonations").then(res => res.json())
     }
 
     function setLoader(show) {
@@ -524,6 +525,7 @@
             entitiesContainer.innerHTML = `<ul class="entities-container">${content}</ul>`;
             allCharities = content;
         }).catch(e => {
+            alert(e);
             window.postMessage({
                 kind: "error",
                 payload: e.message || "UNKNOWN_ERROR"
