--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -33,7 +33,7 @@
     }
 
     h1, h2, p, a, span, label, button {
-        font-family: Work Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        font-family: "Titillium Web", Work Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
         font-style: normal;
         letter-spacing: 0px;
         text-align: left;
@@ -411,10 +411,9 @@
     let allCharities = "";
 
     function fetchData() {
-        // return new Promise(resolve => {
-        //     setTimeout(() => resolve(sampleJson), 1000);
-        // })
-        return fetch("http://localhost:3000/donations/availabledonations").then(res => res.json())
+        const url = "https://api.dev.platform.pagopa.it/donations/availabledonations"
+        // Local env: http://localhost:3000/donations/availabledonations"
+        return fetch(url).then(res => res.json())
     }
 
     function setLoader(show) {
@@ -501,7 +500,7 @@
                 }
             };
             console.log("sending ", paymentPayload);
-            window.postMessage(paymentPayload);
+            sendMessage(paymentPayload);
         } catch (e) {
             console.error(e);
         }
@@ -517,6 +516,12 @@
         window.postMessage(openWebUrlPayload);
     }
 
+    function sendMessage(message) {
+        if (window.ReactNativeWebView) {
+            window.ReactNativeWebView.postMesjage(JSON.stringify(message));
+        }
+    }
+
     function main() {
         const entitiesContainer = document.getElementById("entities-container");
         fetchData().then(parseEntities).then(entities => {
@@ -525,8 +530,7 @@
             entitiesContainer.innerHTML = `<ul class="entities-container">${content}</ul>`;
             allCharities = content;
         }).catch(e => {
-            alert(e);
-            window.postMessage({
+            sendMessage({
                 kind: "error",
                 payload: e.message || "UNKNOWN_ERROR"
             })
