--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -33,7 +33,7 @@
     }
 
     h1, h2, p, a, span, label, button {
-        font-family: "Titillium Web", Work Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        font-family: "Titillium Web", sans-serif;
         font-style: normal;
         letter-spacing: 0px;
         text-align: left;
